<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">英特曼车管家</string>
    <string name="mall">商城</string>
    <string name="carcheck">车况检查</string>
    <string name="drivesafe">驾驶安全</string>
    <string name="gps">行车轨迹/GPS</string>
    <string name="remind">提醒</string>
    <string name="weather">天气</string>
    <string name="remotecheck">远程检测</string>
    <string name="consult">咨询</string>
     <string name="car_weizhang">违章信息</string>
    <string name="my">我的</string>
    <string name="mycarinfor">车辆信息</string>
    <string name="license">牌照:</string>
    <string name="red_paper">红包:</string>
    <string name="my_info">我的信息</string>
    <string name="my_red_paper">我的红包</string>
    <string name="car_configuration">汽车设置</string>
    <string name="shangpinxinxi">商品信息</string>
    <string name="my_carsetting">车辆设置</string>
    <string name="travel_report">行程报告</string>
    <string name="car_dangan">购买档案</string>
    <string name="car_pinpai">品牌</string>
    <string name="banben">版本信息</string>
    <string name="gongneng">功能介绍</string>
    <string name="chexing">车型</string>
    <string name="vinma">VIN码</string>
    <string name="biansuxiang">变速箱</string>
    <string name="pailiang">排量</string>
    <string name="niankuan">年款</string>
    <string name="yxrl">油箱容量</string>
    <string name="onlyshop">指定维修商家</string>
    <string name="whatgolo">英特曼车管家是什么？</string>
    <string name="buyjine">车辆购买金额</string>
    <string name="buybycall">车辆购买单位联系电话</string>
    <string name="carbayby">车辆购买单位</string>
    <string name="buydate">车辆购买日期</string>
    <string name="newlicheng">当前里程</string>
    <string name="car_box">智能盒子</string>
    <string name="car_peizhi">汽车配置</string>
    <string name="car_number">车牌号</string>
    <string name="goumaidangan">购买档案</string>
    <string name="xiugaibaoxian">修改保险信息</string> 
     <string name="addbaoxian">添加保险信息</string> 
    <string name="yearjian">年检信息</string>
    <string name="addyearjian">添加年检信息</string>
    <string name="changeyearjian">修改年检信息</string>
    <string name="xiugaibaoyang">修改保养信息</string> 
    <string name="general_settings">通用设置</string>
    <string name="change_password">修改密码</string>
    <string name="aboutsoftware">关于软件</string>
    <string name="car_setting">车辆设置</string>
    <string name="change_carpeizhi">更改车辆设置</string>
    <string name="my_order">我的订单</string>
    <string name="historical_service">历史服务</string>
    <string name="software_setting">软件设置</string>
    <string name="carlife">车生活</string>
    <string name="box">golo盒子</string>
    <string name="carselect">车辆选择</string>
    <string name="nickname">昵称：</string>
    <string name="user_name">用户：</string>
    <string name="my_words">签名</string>
    <string name="my_words_default">懒人一般都是不写签名的</string>
    <string name="phone">手机</string>
    <string name="driving_licence">驾驶证注册日期</string>
    <string name="driving_years">驾龄</string>
    <string name="area">地区</string>
    <string name="sex">性别：</string>
    <string name="province">省份</string>
    <string name="city">市</string>
    <string name="area_qu">区</string>
    <string name="address">详细地址</string>
    <string name="yearsold">年龄</string>
    <string name="redpaperaccount">当前可用红包</string>
    <string name="howtogetredpaper">如何赚红包</string>
    <string name="use">使用</string>
    <string name="add">增加</string>
     <string name="carname">英特曼车管家 v1.0</string>
    <string name="yeardata">年检日期:</string>
    <string name="nowyeardata">本次年检日期:</string>
    <string name="nextyeardata">下次年检日期:</string>
     <string name="yearmoney">年检费用：</string>
    <string name="baoyangtime">本次保养时间：</string>
    <string name="baoyangmoney">本次保养费用：</string>
    <string name="baoxian">保险信息</string>
    <string name="aboutsoftsetting">关于软件</string>
    <string name="banbeninfo">版本信息</string>
    <string name="function">功能介绍</string>
    <string name="introduction">英特曼车管家是基于20多年专业研发汽车诊断设备知识的积累，
         专门针对移动智能设备的开发的专注于车辆安全、车辆管理一车辆服务的车联网平台。通过英特曼车管家技师、
     英特曼车管家商家，第三方服务的进驻，向车主提供在线专业支持，汽车维保及各种汽车相关服务，让车主不仅可以充分了解机子爱车健康状态，也可以方便的在现获取汽车保养、美容等各种汽车相关服务和帮助，同时，车主还可以使用英特曼车管家红包消费，让车主省心、省钱和放心安全用车   </string>
    <string name="mainfunction">英特曼车管家主要功能</string>
     <string name="ruxiafunction">1.可以随时随地体验车辆，了解车辆状况;</string>
     <string name="twoinfo">2.丰富的汽车服务，享受golo红包优惠，养车方便又实惠;</string>
     <string name="threeinfo">3.可随时远程寻车及导航;</string>
     <string name="fourinfo">4.可在线咨询专家汽车突发状况;</string>
     <string name="fiveinfo">5.可以查询汽车实时汽车状况;</string>
    <string name="shangjiadianhua">商家电话</string>
    <string name="shangjiajieshao">商家介绍</string>
    <string name="baoyang">保养</string>
    <string name="shangjia">商 家</string>
    <string name="shangpin">商 品</string>
    <string name="xiche">洗车</string>
    <string name="meirong">美容</string>
    <string name="luntai">轮胎</string>
    <string name="weixiu">维修</string>
    <string name="peijian">配件</string>
    <string name="tehui">特惠</string>
    <string name="fuwu">服务</string>
    <string name="xuliehao">序列号:</string>
    <string name="jihuoshijian">激活时间:</string>
    <string name="dangqianbanben">当前版本:</string>
    <string name="fabushijian">发布时间:</string>
    <string name="boxmanange">golo盒子管理</string>
    <string name="tishi">提示：VIN码一般在汽车挡风玻璃的左下角或右下角，或可在车辆行驶证中查找</string>
    <string name="notic">请填写车辆识别代号(VIN码)</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="changebox">更换golo盒子</string>
     <string name="addbox">绑定golo盒子</string>
    <string name="zhuxiaobox">注销golo盒子</string>
    <string name="oldpass">旧密码</string>
    <string name="newbox">新盒子序列号</string>
     <string name="newboxpass">新盒子新密码</string>
    <string name="newpass">新密码</string>
    <string name="beizhu">备注：</string>
    <string name="surepass">确认新密码</string>
    <string name="changpass">修改密码</string>
   
    <string name="exitlogin">退出登录</string>
    <string name="yihuode">已获得</string>
    <string name="yishiyong">已使用</string>
    <string name="yiguopqi">已过期</string>
    <string name="car_life">车辆生活</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="enteryourphone">请输入您的手机号</string>
    <string name="loading">加载中…</string>
    <string name="car_nav">车位导航</string>
    <string name="shop_nav">商家导航</string>
    <string name="speed">速度</string>
    <string name="average_oil">平均油耗</string>
    <string name="rest_oil">剩余油量</string>
    <string name="storage_battery">电瓶电压</string>
    <string name="oil_consumption">耗油量</string>
    <string name="total_mileage">总里程</string>
    <string name="setdate">设置日期</string>
    <string name="startpoint">起点</string>
    <string name="endpoint">终点</string>
    <string name="average_speed">平均速度</string>
    <string name="drivetime">行驶时间</string>
    <string name="historycarreport">历史报告</string>
    <string name="faultcode">故障码</string>
    <string name="dataflow">数据流</string>
    <string name="conclusion">检查结论</string>
    <string name="faultexplain">故障解释:</string>
    <string name="dataflowexplain">数据流解释:</string>
    <string name="repairsug">维修建议:</string>
    <string name="maintainsug">保养建议:</string>
    <string name="xiangxi">详细:</string>
    <string name="explain">解释:</string>
    <string name="suggestion">建议方案:</string>
    <string name="historyremind">历史提醒</string>
    <string name="firstremind">紧急消息</string>
    <string name="sconedremind">重要消息</string>
    <string name="thirdremind">一般消息</string>

    <string name="maintenance">保养记录</string>
    <string name="servicecycle">保养里程：</string>
    <string name="thisservicecycle">本次保养时车辆里程：</string>
     <string name="thisyibiao">当前仪表里程：</string>
    <string name="project">保养项目:</string>
    <string name="pproject">保养项目</string>


</resources>