<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
        >
        <TextView 
    android:paddingTop="5dp"
    android:layout_marginLeft="20dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textSize="15dp"
    android:text="@string/changpass"
            /> 
    </LinearLayout>
     <View 
         
    android:layout_width="match_parent"
    android:layout_height="1dp"
    android:layout_marginTop="5dp"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:background="@color/linegray"/> 
    <EditText 
    android:id="@+id/edt_one"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:hint="@string/oldpass"
        />
       <EditText 
    android:id="@+id/edt_two"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:hint="@string/newpass"
        />
         <EditText 
    android:id="@+id/edt_three"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    android:layout_marginTop="20dp"
    android:background="@drawable/auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:hint="@string/surepass"
        />
   <LinearLayout 
    android:paddingBottom="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"  
    android:orientation="horizontal"
       >
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_marginTop="20dp" 
    android:layout_marginLeft="20dp"
          >
   <TextView 
    android:id="@+id/cancelButton"
    android:layout_width="130dp"
    android:layout_height="40dp" 
    android:text="@string/cancel"
    android:gravity="center"
    android:textColor="@color/black"
    android:background="@color/textgraydark"  
          />    
          
    </RelativeLayout> 
    <RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:layout_gravity="right"
          >
     <TextView
          android:id="@+id/sureButton"
           android:layout_marginTop="20dp" 
           android:layout_marginLeft="10dp"
            android:layout_width="130dp"
            android:layout_height="40dp"
            android:background="@color/orangedark"
            android:gravity="center"
            android:textColor="@color/black"
            android:text="@string/sure" />
      </RelativeLayout>

   </LinearLayout>      
         
</LinearLayout>
