<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp" >

        <LinearLayout
            android:id="@+id/lin_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/back_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/remind"
                android:textColor="@color/orangelight"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="@string/historyremind"
            android:textSize="18sp" />
    </RelativeLayout>
     <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linegray" />
     <LinearLayout 
         android:layout_width="match_parent"
         android:layout_height="35dp"
         android:orientation="horizontal">
         <RelativeLayout 
             android:id="@+id/rel_first"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent">

             <TextView
                 android:id="@+id/tv_first"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:text="@string/firstremind"
                 android:textSize="16sp"
                 android:textColor="@color/textgraylight" />

             <View
                 android:id="@+id/vi_first"
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:background="@color/textgraylight" />

             <TextView
                 android:id="@+id/tv_firstnum"
                 android:gravity="center"
                 android:visibility="gone"
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="3dp"
                 android:layout_alignParentTop="true"
                 android:background="@drawable/tv_circle" />

         </RelativeLayout>
          <RelativeLayout 
             android:id="@+id/rel_second"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent">
              <TextView
                  android:id="@+id/tv_second"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:text="@string/sconedremind"
                 android:textSize="16sp"
                 android:textColor="@color/textgraylight" />

              <TextView
                 android:id="@+id/tv_secondnum"
                 android:gravity="center"
                 android:visibility="gone"
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="3dp"
                 android:layout_alignParentTop="true"
                 android:background="@drawable/tv_circle" />
             <View
                 android:id="@+id/vi_second"
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:background="@color/textgraylight" />
          </RelativeLayout>
           <RelativeLayout 
             android:id="@+id/rel_third"
             android:layout_width="0dp"
             android:layout_weight="1"
             android:layout_height="match_parent">
               <TextView
                   android:id="@+id/tv_third"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
                 android:layout_centerVertical="true"
                 android:text="@string/thirdremind"
                 android:textSize="16sp"
                 android:textColor="@color/textgraylight" />

               <TextView
                 android:id="@+id/tv_thirdnum"
                 android:gravity="center"
                 android:visibility="gone"
                 android:textColor="@color/white"
                 android:textSize="12sp"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_alignParentRight="true"
                 android:layout_marginTop="3dp"
                 android:layout_alignParentTop="true"
                 android:background="@drawable/tv_circle" />
             <View
                 android:id="@+id/vi_third"
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentLeft="true"
                 android:background="@color/textgraylight" />
           </RelativeLayout>
     </LinearLayout>
    
     <FrameLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </FrameLayout>
</LinearLayout>
