<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgray"
    android:orientation="vertical" >
    <RelativeLayout 
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/orangelight">

        <LinearLayout
            android:id="@+id/lin_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/area"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/img_save"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@+id/lin_back"
            android:layout_marginRight="10dp"
            android:src="@drawable/right" />

    </RelativeLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linegray"/>

    <RelativeLayout
        android:id="@+id/rel_province"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/province"
            android:textColor="@color/textgraydark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_my_words"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="浙江"
            android:textColor="@color/textgraylight"
            android:textSize="16sp" />

    </RelativeLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/linegray"/>
    
    <RelativeLayout
        android:id="@+id/rel_city"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/city"
            android:textColor="@color/textgraydark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="宁波"
            android:textColor="@color/textgraylight"
            android:textSize="16sp" />

    </RelativeLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/linegray"/>
    
    <RelativeLayout
        android:id="@+id/rel_area_qu"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/area_qu"
            android:textColor="@color/textgraydark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_area_qu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:text="江北"
            android:textColor="@color/textgraylight"
            android:textSize="16sp" />

    </RelativeLayout>
    
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/linegray"/>
    
    <RelativeLayout
        android:id="@+id/rel_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:text="@string/address"
            android:textColor="@color/textgraydark"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="right"
            android:text="宁波工程学院东校区509"
            android:singleLine="true"
            android:textColor="@color/textgraylight"
            android:textSize="16sp" />
    </RelativeLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:background="@color/linegray"/>
    </LinearLayout>

</LinearLayout>
