<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white" >
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp" >

        <LinearLayout
            android:id="@+id/lin_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/back_orange" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/faultcode"
                android:textColor="@color/orangelight"
                android:textSize="20sp" />
        </LinearLayout>

    </RelativeLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linegray"/>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView 
            android:id="@+id/tv_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textColor="@color/orangelight"/>
        
         <TextView 
             android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textColor="@color/textgraylight"/>
        
        
    </LinearLayout>
    <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linegray"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textColor="@color/orangelight"
            android:textSize="16sp"
            android:text="@string/faultexplain"/>
        
         <TextView 
             android:id="@+id/tv_faultexplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textColor="@color/textgraylight"/>
        
        
    </LinearLayout>
     <View 
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/linegray"/>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textColor="@color/orangelight"
            android:text="@string/repairsug"/>
        
         <TextView 
             android:id="@+id/tv_repairsug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:textSize="16sp"
            android:textColor="@color/textgraylight"/>
        
        
    </LinearLayout>
    </LinearLayout>
    
    </ScrollView>

</LinearLayout>
